<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_create_id"
            android:icon="@drawable/ic_create_black_24dp"
            android:title="@string/create_account" />
        <item
            android:id="@+id/nav_report_list"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/report_list" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/chat" />
    </group>

    <item android:title="@string/Other">
        <menu>
            <item
                android:id="@+id/nav_alert"
                android:icon="@drawable/ic_add_alert_black_24dp"
                android:title="@string/alert" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback_black_24dp"
                android:title="@string/feedback" />
        </menu>
    </item>

</menu>
