<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportEditActivity">

    <TextView
        android:id="@+id/reportDetailss1"
        android:layout_width="176dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/reportDetails21"
        android:layout_width="212dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:text="@string/Report_type"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/reportImage1"
        android:layout_width="122dp"
        android:layout_height="110dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reportDetailss1"
        app:layout_constraintVertical_bias="0.064"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/reportStatusUI1"
        android:layout_width="96dp"
        android:layout_height="20dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="136dp"
        android:text="@string/report_status"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reportDetailss1" />

    <TextView
        android:id="@+id/complaintDateUI1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="72dp"
        android:text="@string/complaint_date_and_time"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reportStatusUI1" />

    <TextView
        android:id="@+id/complaintDate1"
        android:layout_width="214dp"
        android:layout_height="23dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/complaintDateUI1" />

    <TextView
        android:id="@+id/complaintTime1"
        android:layout_width="136dp"
        android:layout_height="20dp"
        android:layout_marginEnd="92dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/complaintDate1"
        app:layout_constraintTop_toBottomOf="@+id/complaintDate1" />

    <View
        android:id="@+id/divider1"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.313" />

    <View
        android:id="@+id/divider31"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.623" />

    <TextView
        android:id="@+id/reportNotes1"
        android:layout_width="315dp"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:text="Textv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/reportNotesUI1"
        app:layout_constraintTop_toBottomOf="@+id/reportNotesUI1" />

    <TextView
        android:id="@+id/reportNotesUI1"
        android:layout_width="143dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/report_notes"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider31" />

    <TextView
        android:id="@+id/reportLocation1"
        android:layout_width="294dp"
        android:layout_height="68dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:text="Textv"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="@+id/reportLocationUI1"
        app:layout_constraintTop_toBottomOf="@+id/reportLocationUI1" />

    <TextView
        android:id="@+id/reportCategoryUI1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/report_category"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider1" />

    <TextView
        android:id="@+id/reportCategory1"
        android:layout_width="294dp"
        android:layout_height="56dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="@+id/reportCategoryUI1"
        app:layout_constraintTop_toBottomOf="@+id/reportCategoryUI1" />

    <TextView
        android:id="@+id/reportLocationUI1"
        android:layout_width="143dp"
        android:layout_height="24dp"
        android:layout_marginTop="4dp"
        android:text="@string/report_location"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider21" />

    <View
        android:id="@+id/divider21"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.456" />

    <Spinner
        android:id="@+id/report_status_list1"
        android:layout_width="127dp"
        android:layout_height="20dp"
        android:layout_marginTop="36dp"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/reportStatusUI1"
        app:layout_constraintTop_toBottomOf="@+id/reportDetailss1" />

    <Button
        android:id="@+id/btnSave1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.962"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008" />



</androidx.constraintlayout.widget.ConstraintLayout>